src/tests/e2e/snapshots/vc_frame__tests__e2e__cases__cannot_split_terminals_vertically_when_active_terminal_is_too_small.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
        
┌──────┐
│$ █   │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
│      │
└──────┘
  ...
